fix main vis not covering height issue

--- a/css/common.css
+++ b/css/common.css
@@ -32,6 +32,7 @@ h3 {
 #main {
     position: relative;
     margin: 0;
+    min-height: 100vh;
 }
 
 #main-vis-switch{
